--- a/gb/19/12/10/n11712839.md
+++ b/gb/19/12/10/n11712839.md
@@ -1,69 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/fxikhp286/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/fxikhp286/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/fxikhp286/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>µÚ77½ì½ðÇò½±ÌáÃû½ÒÏþ °ÄÖÞÈý¾ÞÐÇÈëÎ§</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ç¬¬77å±Šé‡‘çƒå¥–æåæ­æ™“ æ¾³æ´²ä¸‰å·¨æ˜Ÿå…¥å›´</h2>
 
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê12ÔÂ10ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÐ¤æ¼°ÄÖÞÏ¤Äá±àÒë±¨µ¼£©<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E7%AC%AC77%E5%B1%8A%E9%87%91%E7%90%83%E5%A5%96.md">µÚ77½ì½ðÇò½±</a><a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E6%8F%90%E5%90%8D.md">ÌáÃû</a>ÓÚ±¾ÖÜÒ»£¨ÃÀÎ÷Ê±¼ä£©½ÒÏþ£¬°ÄÖÞÈýÎ»ÔøÈÙ»ñ°ÂË¹¿¨Ó°ºóÓ°µÛ³ÆºÅµÄºÃÀ³Îë¾ÞÐÇ¡ª¡ª¿ËÀÍ£¨Russell Crowe£©¡¢»ùµÂÂü£¨Nicole Kidman£©¡¢ ²¼À¼ÇÐÌØ£¨Cate Blanchett£©¾ùÈëÎ§½ðÇò½±ÌáÃû¡£</p>
-<p>¿ËÀÍÆ¾½èÊ·Ê«Æ¬¡¶½Ç¶·Ê¿¡·Ôø»ñµÚ73½ì°ÂË¹¿¨×î¼ÑÄÐÖ÷½Ç½±£¬±¾ÊÀ¼Í³õËûÔø¶à´Î»ñµÃ°ÂË¹¿¨½±ºÍ½ðÇò½±µÄ<a href="https://github.com/fxikhp286/djy/blob/master/gb/tag/%E6%8F%90%E5%90%8D.md">ÌáÃû</a>£¬Ö®ºó£¬ËûËÆºõ¡°ÏúÉùÄä¼£¡±¡£Ê®¶àÄêºó£¬ÖÜÒ»£¬ËûÒòÔÚµçÊÓÃÔÄãÏµÁÐ¾ç¡¶×îÏìÁÁµÄÉùÒô¡·£¨The Loudest Voice£©ÖÐ³öÉ«ÊÎÑÝ¸£¿ËË¹ÐÂÎÅ£¨Fox News£©ÀÏ°å°¬¶ûË¹£¨Roger Ailes£©£¬ÔÙ´Î»ñµÃ½ðÇò½±ÌáÃû¡£</p>
-<p>Òò¾çÇéÆ¬¡¶Ê±Ê±¿Ì¿Ì¡·¶ø»ñµÃµÚ75½ì°ÂË¹¿¨½ðÏñ½±×î¼ÑÅ®Ö÷½Ç½±µÄ»ùµÂÂü£¬ÔøÒòÔÚµçÊÓÏµÁÐ¾ç¡¶´óÐ¡»ÑÑÔ¡·µÚÒ»¼¾ÖÐ³É¹¦µØ¿Ì»­ÁË»³ÌØ£¨Celeste Wright£©Õâ¸ö¸´ÔÓÇÒ¾ßÓÐÌôÕ½ÐÔµÄÈËÎï£¬ÔÚ¸÷´ó°ä½±ÖÐ´ó»ñÈ«Ê¤¡£±¾´Î£¬ËýÒòÔÚ¸Ã¾çµÚ¶þ¼¾ÖÐµÄ³öÉ«±íÑÝÔÙ´Î»ñµÃ½ðÇò½±ÌáÃû¡£</p>
-<p>²¼À¼ÇÐÌØÆ¾½èµçÓ°¡¶À¶É«ÜÔÀò¡·»ñµÃµÚ86½ì°ÂË¹¿¨½ðÏñ½±×î¼ÑÅ®Ö÷½Ç½±ºó£¬±¾´ÎÒòÔÚÒôÀÖÏ²¾çÀàÓ°Æ¬¡¶Äã»áÈ¥ÄÄ£¬²®ÄÉ÷ìÌØ¡·ÊÎÑÝÅ®Ö÷½Ç²®ÄÉ÷ìÌØÈÙ»ñ½ðÇò½±ÌáÃû¡£</p>
-<p>¾ÝÏ¤Äá³¿·æ±¨±¨µ¼£¬°ÄÖÞÅ®ÑÝÔ±ÂÞ±È£¨Margot Robbie£©Òò³öÑÝÓ°Æ¬¡¶±¬Õ¨ÐÂÎÅ¡·£¨Bombshell£©»ñµÃ±¾½ì½ðÇò½±×î¼ÑÅ®Åä½ÇÌáÃû¡£</p>
-<p>°ÄÖÞÅ®ÑÝÔ±¿ÆÀ³ÌØ£¨Toni Collette£©Æ¾½èÓ°Æ¬¡¶ÄÑÒÔÖÃÐÅ¡·£¨Unbelievable£©Ò²»ñµÃ×î¼ÑÅ®Åä½ÇÌáÃû¡£</p>
-<p>Á÷Ã½Ìå¹«Ë¾NetflixµÄ°üÀ¨¡¶»éÒö¹ÊÊÂ¡·ÔÚÄÚµÄ¼¸²¿µçÓ°»ñµÃ17ÏîÌáÃû£¬ÔÚ±¾½ì½ðÇò½±ÌáÃûÖÐ°ÎµÃÍ·³ï¡£</p>
-<p>½ðÇò½±°ä½±ÒÇÊ½½«ÓÚÃ÷Äê1ÔÂ5ÈÕÔÚÃÀ¹úÂåÉ¼í¶±È¸¥ÀûÉ½×¯£¨Beverly Hills£©¾ÙÐÐ¡£</p>
-<p>ÔðÈÎ±à¼­£ºÔÀÃ÷</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´12æœˆ10æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…è‚–å©•æ¾³æ´²æ‚‰å°¼ç¼–è¯‘æŠ¥å¯¼ï¼‰<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%AC%AC77%E5%B1%8A%E9%87%91%E7%90%83%E5%A5%96.md#1">ç¬¬77å±Šé‡‘çƒå¥–</a><ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E6%8F%90%E5%90%8D.md#1">æå</a>äºŽæœ¬å‘¨ä¸€ï¼ˆç¾Žè¥¿æ—¶é—´ï¼‰æ­æ™“ï¼Œæ¾³æ´²ä¸‰ä½æ›¾è£èŽ·å¥¥æ–¯å¡å½±åŽå½±å¸ç§°å·çš„å¥½èŽ±åžå·¨æ˜Ÿâ€”â€”å…‹åŠ³ï¼ˆRussell Croweï¼‰ã€åŸºå¾·æ›¼ï¼ˆNicole Kidmanï¼‰ã€ å¸ƒå…°åˆ‡ç‰¹ï¼ˆCate Blanchettï¼‰å‡å…¥å›´é‡‘çƒå¥–æåã€‚</p>
+<p>å…‹åŠ³å‡­å€Ÿå²è¯—ç‰‡ã€Šè§’æ–—å£«ã€‹æ›¾èŽ·ç¬¬73å±Šå¥¥æ–¯å¡æœ€ä½³ç”·ä¸»è§’å¥–ï¼Œæœ¬ä¸–çºªåˆä»–æ›¾å¤šæ¬¡èŽ·å¾—å¥¥æ–¯å¡å¥–å’Œé‡‘çƒå¥–çš„<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E6%8F%90%E5%90%8D.md#1">æå</a>ï¼Œä¹‹åŽï¼Œä»–ä¼¼ä¹Žâ€œé”€å£°åŒ¿è¿¹â€ã€‚åå¤šå¹´åŽï¼Œå‘¨ä¸€ï¼Œä»–å› åœ¨ç”µè§†è¿·ä½ ç³»åˆ—å‰§ã€Šæœ€å“äº®çš„å£°éŸ³ã€‹ï¼ˆThe Loudest Voiceï¼‰ä¸­å‡ºè‰²é¥°æ¼”ç¦å…‹æ–¯æ–°é—»ï¼ˆFox Newsï¼‰è€æ¿è‰¾å°”æ–¯ï¼ˆRoger Ailesï¼‰ï¼Œå†æ¬¡èŽ·å¾—é‡‘çƒå¥–æåã€‚</p>
+<p>å› å‰§æƒ…ç‰‡ã€Šæ—¶æ—¶åˆ»åˆ»ã€‹è€ŒèŽ·å¾—ç¬¬75å±Šå¥¥æ–¯å¡é‡‘åƒå¥–æœ€ä½³å¥³ä¸»è§’å¥–çš„åŸºå¾·æ›¼ï¼Œæ›¾å› åœ¨ç”µè§†ç³»åˆ—å‰§ã€Šå¤§å°è°Žè¨€ã€‹ç¬¬ä¸€å­£ä¸­æˆåŠŸåœ°åˆ»ç”»äº†æ€€ç‰¹ï¼ˆCeleste Wrightï¼‰è¿™ä¸ªå¤æ‚ä¸”å…·æœ‰æŒ‘æˆ˜æ€§çš„äººç‰©ï¼Œåœ¨å„å¤§é¢å¥–ä¸­å¤§èŽ·å…¨èƒœã€‚æœ¬æ¬¡ï¼Œå¥¹å› åœ¨è¯¥å‰§ç¬¬äºŒå­£ä¸­çš„å‡ºè‰²è¡¨æ¼”å†æ¬¡èŽ·å¾—é‡‘çƒå¥–æåã€‚</p>
+<p>å¸ƒå…°åˆ‡ç‰¹å‡­å€Ÿç”µå½±ã€Šè“è‰²èŒ‰èŽ‰ã€‹èŽ·å¾—ç¬¬86å±Šå¥¥æ–¯å¡é‡‘åƒå¥–æœ€ä½³å¥³ä¸»è§’å¥–åŽï¼Œæœ¬æ¬¡å› åœ¨éŸ³ä¹å–œå‰§ç±»å½±ç‰‡ã€Šä½ ä¼šåŽ»å“ªï¼Œä¼¯çº³é»›ç‰¹ã€‹é¥°æ¼”å¥³ä¸»è§’ä¼¯çº³é»›ç‰¹è£èŽ·é‡‘çƒå¥–æåã€‚</p>
+<p>æ®æ‚‰å°¼æ™¨é”‹æŠ¥æŠ¥å¯¼ï¼Œæ¾³æ´²å¥³æ¼”å‘˜ç½—æ¯”ï¼ˆMargot Robbieï¼‰å› å‡ºæ¼”å½±ç‰‡ã€Šçˆ†ç‚¸æ–°é—»ã€‹ï¼ˆBombshellï¼‰èŽ·å¾—æœ¬å±Šé‡‘çƒå¥–æœ€ä½³å¥³é…è§’æåã€‚</p>
+<p>æ¾³æ´²å¥³æ¼”å‘˜ç§‘èŽ±ç‰¹ï¼ˆToni Colletteï¼‰å‡­å€Ÿå½±ç‰‡ã€Šéš¾ä»¥ç½®ä¿¡ã€‹ï¼ˆUnbelievableï¼‰ä¹ŸèŽ·å¾—æœ€ä½³å¥³é…è§’æåã€‚</p>
+<p>æµåª’ä½“å…¬å¸Netflixçš„åŒ…æ‹¬ã€Šå©šå§»æ•…äº‹ã€‹åœ¨å†…çš„å‡ éƒ¨ç”µå½±èŽ·å¾—17é¡¹æåï¼Œåœ¨æœ¬å±Šé‡‘çƒå¥–æåä¸­æ‹”å¾—å¤´ç­¹ã€‚</p>
+<p>é‡‘çƒå¥–é¢å¥–ä»ªå¼å°†äºŽæ˜Žå¹´1æœˆ5æ—¥åœ¨ç¾Žå›½æ´›æ‰çŸ¶æ¯”å¼—åˆ©å±±åº„ï¼ˆBeverly Hillsï¼‰ä¸¾è¡Œã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šå²³æ˜Ž</p>
 <p>&nbsp;</p>
 
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/12/10/n11712839.htm">µÚ77½ì½ðÇò½±ÌáÃû½ÒÏþ °ÄÖÞÈý¾ÞÐÇÈëÎ§</a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/10/17/n11594165.htm">Ó°Òô´®Á÷Æ½Ì¨ÕýÔÚ¸Ä±äÄãµÄÉú»î ÈçºÎÌôÑ¡£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/25/n11546534.htm">´ÓÓ°40Äê ÌÀÄ·¡¤ºº¿ËË¹»ñ½ðÇò½±ÖÕÉí³É¾Í½±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/7/n11506144.htm">76½ìÍþÄáË¹µçÓ°½Ú½ÒÏþ ¡¶Ð¡³ó¡·Õª×î¼ÑÓ°Æ¬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/21/n11271529.htm">Àî°ÂÄÉ¶àÖØ·µ´óÒøÄ»¡¶´ÓÇ°£¬ÓÐ¸öºÃÀ³Îë¡·ÔìÐÍ¶à±ä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/13/n11254048.htm">¡¶°¢À­¶¡¡·ÕæÈË°æµçÓ° Íþ¶ûÊ·ÃÜË¹°çÉñµÆ¾«Áé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/28/n11219029.htm">38ÄêÐÒ¸£»éÒö°é·çÓê ¡°µ¤ÖÐÎ¾¡±·ÖÏíÃØ¾÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/19/n11197887.htm">ÉñÔÏ³ÈÏØÔÙ±¬Âú °¢²¨ÂÞ¼Æ»®ÏÈÇýÔÞ¶ÀÒ»ÎÞ¶þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/14/n11185650.htm">ÂåÉ¼í¶Ò»Æ±ÄÑÇó ½ðÇò½±°¬ÃÀ½±µÃÖ÷ÆëÔÞÉñÔÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/14/n11185622.htm">°ÂË¹¿¨ÌáÃûÖÆÆ¬ÈË£ºÉñÔÏÔ¢½ÌÓÚÀÖ ¾«²ÊÖÁ¼«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/28/n11145954.htm">¡¶±¯²ÒÊÀ½ç¡·ÍÆ³öµçÊÓ°æ ÑÝ¼¼ÅÉ¾ÞÐÇÆë¾Û</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/12/4/n11701362.htm">×ß³ö»ªÎªµÄ¹¤³ÌÊ¦£º»ªÎªÊÇÈ«ÈËÀàµÄØ¬ÃÎ(ÉÏ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11709542.htm">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²¼ß-10Õ½»úÓÉÀ´ÆØ¹â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11711891.htm">ºÓ±±ÄÐ×Ó7ÈÕ5´ÎÌá1ÍòÃÀÔªÏÖ³® ±»·£4Íò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11711248.htm">¡¾ÐÂÎÅ¿´µã¡¿±±¾©ÔÙ´ÙÃ³Ì¸ ÃÀÐÂÀäÕ½³ÉÖÐ¹²ÃÎ÷Ê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11682462.htm">ÔÚ´óÊÇ´ó·ÇÃæÇ° Ã»ÓÐÖÐÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693210.htm">¡°ÈýÊÀÒò¹û¡±ÉÆ¶ñÓÐ±¨ ÎªºÎÓÐÊ±¿´²»µ½¹û±¨£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688048.htm">Ãñ¹ú¾ü·§¼ûÖ¤Ææ¼££ºÄº´ºÆíÑ© ÈËÌå×Ô»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703454.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®Áù£º²Ü²ÙÈçºÎ¾øµØ·êÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708956.htm">ÃÀ¹ú´óÑ§Ñ°ÕÒµÄÈË²Å£º6ÖÖÍÑÓ±¶ø³öµÄ·½·¨£¨ÏÂ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11710858.htm">11ÔÂµ­¼¾ ÍåÇø·¿¼ÛÔì·´ÁË£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708870.htm">×éÍ¼£ºËÕ¸ñÀ¼Ê¥µ®ÀÏÈË´ÈÉÆÂ·ÅÜ »¶ÀÖÇì¼Ñ½Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/18/n11663142.htm">ºÃÖ÷¹ÜÓ¦¸ÃÖØµ±ÏÂ»¹ÊÇÖØÎ´À´£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11711222.htm">¿ì×ß»òåÞ¹·30·ÖÖÓ ¿É½µµÍÄÐÐÔÌÇÄò²¡·çÏÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/9/n11709319.htm">¡¾ÅÄ°¸¾ªÆæ¡¿ÓÐ¾ªÎÞÏÕ 80Íò¸ÛÈËÓÎÐÐºÍÆ½ÂäÄ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11707833.htm">¡¾Ë¼ÏëÁìÐä¡¿»Æ¹úÍ©£º¸Û¾¯×èÂÉÊ¦¼û±»²¶Õß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/2/n11695743.htm">¡¾ÎÒÀ´ËµÎ÷ÓÎ¡¿ÛÝÇÅ½øÂÄ Îò¿ÕÓÐËùÎò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11707668.htm">ÖÐ¹úÕ®ÎñÎ¥Ô¼¶ñ»¯ Ì¨11ÒøÐÐÁªºÏ´û¿îÖÐÆó²ÈÀ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/6/n11706387.htm">¡¾Ö±²¥»Ø·Å¡¿12.8¹ú¼ÊÈËÈ¨ÈÕ 80ÍòÈË´óÓÎÐÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708917.htm">ÓáÇ¿Éù³öÌÓ ´«ÓëÆä¸¸±»Ã«Ôó¶«»î»îÏÅËÀÓÐ¹Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11707854.htm">ÁÖÖ¾Áá»éºóÆØÐÄÉù£ºÏë×¨ÐÄ¾­Óª×Ô¼ºµÄÈËÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11709100.htm">Òò³Å¸ÛÐÂ×¨¼­ÔâÖÐ¹²·âÉ± ¶­ÊÂ³¤ÀÖÍÅ°ÔÆø»ØÓ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11709186.htm">ÑîÇ§‹ÃÔÚ×ÛÒÕ½ÚÄ¿ÖÐ±¬¿Þ ×Ô³°ÏñÓéÀÖÈ¦µÄ¹ÖÎï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708923.htm">¸èÊÖ»ÆÒ«Ã÷12.8ÓÎÐÐ±íÐÄÉù£ºÐÐ³öÏã¸ÛÂ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/8/n11708075.htm">ÉúÑÄ×îºóÒ»´ÎµÇÐ¡¾Þµ° ÄªÎÄÎµÑÝ³ªÖÐ¸Ð¶¯ÊÃÀá</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/26/n11682462.htm">ÔÚ´óÊÇ´ó·ÇÃæÇ° Ã»ÓÐÖÐÁ¢</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/10/18/n8407193.htm">ÎÄÒÕ¸´ÐËËÄ´ó¾­µä»æ»­·ç¸ñÓë¼¼·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/1/n11693210.htm">¡°ÈýÊÀÒò¹û¡±ÉÆ¶ñÓÐ±¨ ÎªºÎÓÐÊ±¿´²»µ½¹û±¨£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/28/n11688048.htm">Ãñ¹ú¾ü·§¼ûÖ¤Ææ¼££ºÄº´ºÆíÑ© ÈËÌå×Ô»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703454.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®Áù£º²Ü²ÙÈçºÎ¾øµØ·êÉú</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/3/28/n11145954.md#1">ã€Šæ‚²æƒ¨ä¸–ç•Œã€‹æŽ¨å‡ºç”µè§†ç‰ˆ æ¼”æŠ€æ´¾å·¨æ˜Ÿé½èš</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/14/n11185622.md#1">å¥¥æ–¯å¡æååˆ¶ç‰‡äººï¼šç¥žéŸµå¯“æ•™äºŽä¹ ç²¾å½©è‡³æž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/14/n11185650.md#1">æ´›æ‰çŸ¶ä¸€ç¥¨éš¾æ±‚ é‡‘çƒå¥–è‰¾ç¾Žå¥–å¾—ä¸»é½èµžç¥žéŸµ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/19/n11197887.md#1">ç¥žéŸµæ©™åŽ¿å†çˆ†æ»¡ é˜¿æ³¢ç½—è®¡åˆ’å…ˆé©±èµžç‹¬ä¸€æ— äºŒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/28/n11219029.md#1">38å¹´å¹¸ç¦å©šå§»ä¼´é£Žé›¨ â€œä¸¹ä¸­å°‰â€åˆ†äº«ç§˜è¯€</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/13/n11254048.md#1">ã€Šé˜¿æ‹‰ä¸ã€‹çœŸäººç‰ˆç”µå½± å¨å°”å²å¯†æ–¯æ‰®ç¥žç¯ç²¾çµ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/21/n11271529.md#1">æŽå¥¥çº³å¤šé‡è¿”å¤§é“¶å¹•ã€Šä»Žå‰ï¼Œæœ‰ä¸ªå¥½èŽ±åžã€‹é€ åž‹å¤šå˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/9/7/n11506144.md#1">76å±Šå¨å°¼æ–¯ç”µå½±èŠ‚æ­æ™“ ã€Šå°ä¸‘ã€‹æ‘˜æœ€ä½³å½±ç‰‡</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/9/25/n11546534.md#1">ä»Žå½±40å¹´ æ±¤å§†Â·æ±‰å…‹æ–¯èŽ·é‡‘çƒå¥–ç»ˆèº«æˆå°±å¥–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/10/17/n11594165.md#1">å½±éŸ³ä¸²æµå¹³å°æ­£åœ¨æ”¹å˜ä½ çš„ç”Ÿæ´» å¦‚ä½•æŒ‘é€‰ï¼Ÿ</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11712839.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">è¯äººæè¿°æ´»æ‘˜ææ€–</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/3/n11362608.md#1" target="_blank">æž—è¾‰ï¼šæ–‡é©é›†é‚®ä¹Ÿæ˜¯ç½ªè¿‡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">å¤–åª’ï¼šä¸­å›½é™†å†›åŒ»é™¢å‰å®žä¹ ç”Ÿäº²åŽ†æ´»æ‘˜å™¨å®˜</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731595.md#1">æ—©ä¸Šèµ·åºŠåš1ä»¶äº‹ è¿œç¦»è¿‡æ•æ€§é¼»ç‚Ž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/4/n12731708.md#1">ã€çè¨€çœŸè¯­ã€‘åçº¢åª’æ¸—é€ éƒ‘æ•¬åŸºåŠ å›½åˆ›æ¸¯äººç”µå°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731260.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘24äº¿ç¾Žå…ƒ å²ä¸Šåå¤§æœ€è´µæˆ˜æœº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12724829.md#1">ä¹Œå…‹å…°ç½‘çº¢æ¯å¤©ç©¿19ä¸–çºªæœè£… å¦‚å¤å…¸ç¾Žäºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/12/10/n11712839.htm">ç¬¬77å±Šé‡‘çƒå¥–æåæ­æ™“ æ¾³æ´²ä¸‰å·¨æ˜Ÿå…¥å›´</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/12/10/n11712839.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
